2003-05-01  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: add explicitly DSC-P32 (was autodetected)
	  add Coolpix 2000

2003-04-25 Mariusz Woloszyn
	* Makefile.am: added ptp_test as noinst_PROGRAMS
	* README: changed references to test_ptp to ptp_test
	* test_ptp.c: added some functions prototypes (to avoid warnings),
	  reconstructed usage() plus some cosmetic changes

2003-04-25 Mariusz Woloszyn
	* library.c: romved dups in cameras declaration, cosmetic --about
	  changes

2003-04-25 Mariusz Woloszyn
	* README: added to ptp2
	* test_ptp.c: added to ptp2
	* TODO: added to ptp2

2003-04-25 Mariusz Woloszyn
	* library.c: added perror on gp_port_read() and write error; it
	  won't hurt
	* ptp.c: NULL does not have to be 0 bug fixed;
	  cosmetics error output tuning;
	  unpack structures only if transaction succeeded
	* ChangeLog: reformated this file ;)

2003-04-12 Marcus Meissner <marcus@jet.franken.de>
	
	* ptp.c, library.c: Check return codes for property get during
	  --config.

2003-04-10 Mariusz Woloszyn
	* library.c: added Canon A70
2003-04-03 Mariusz Woloszyn
	* ptp.c: added ptp_free_devicepropdesc()
	* ptp.h: added ptp_free_devicepropdesc()
	* library.c: ptp_free_devicepropdesc() used to free allocated
	  structures
2003-04-03 Mariusz Woloszyn
	* library.c: enabled getting config support;
	  curently only getting batery level is supported;
	* ptp-pack.c: "finished" Device Property Describing Dataset
	  unpacking function ptp_unpack_DPD();
	* ptp.h: changed PTP_DC_* to PTP_DTC_* (DTC stands for DataType Code);
	  changed PTPDevicePropDesc fields name;
	* ptp.c: added ptp_getdevicepropvalue() (not working properly yet);
2003-04-01 Mariusz Woloszyn
	* library.c: added Kodak CX4200 explicite support;
	  added some get config code (it's not enabled, nor finished yet);
	  added some extra debug info about events and properties supported
	* ptp-pack.c: intoduced ptp_unpack_DPD (not finished yet)
	* ptp.c: added ptp_getdevicepropdesc()